# insta-intelligence-platform

./: .env.example  .gitignore  BATCH0_MANIFEST.md  CLINE_MASTER_PROMPT_INSTA_INTELLIGENCE_PLATFORM.txt  CLINE_PROJECT_RULES.md  README.md  package.json  pnpm-lock.yaml  sert-OK([string]$Name) {  turbo.json
backend/: Cargo.toml
backend/crates/alerts/: Cargo.toml  README.md
backend/crates/alerts/src/: lib.rs
backend/crates/analytics/: Cargo.toml  README.md
backend/crates/analytics/src/: lib.rs
backend/crates/auth/: Cargo.toml  README.md
backend/crates/billing/: Cargo.toml  README.md
backend/crates/compliance/: Cargo.toml  README.md
backend/crates/config/: Cargo.toml  README.md
backend/crates/core/: Cargo.toml  README.md
backend/crates/database/: Cargo.toml  README.md
backend/crates/events/: Cargo.toml  README.md
backend/crates/exports/: Cargo.toml  README.md
backend/crates/meta-api/: Cargo.toml  README.md
backend/crates/observability/: Cargo.toml  README.md
backend/crates/policy/: Cargo.toml  README.md
backend/crates/providers/: Cargo.toml  README.md
backend/crates/search/: Cargo.toml  README.md
backend/crates/tenancy/: Cargo.toml  README.md
backend/crates/testing/: Cargo.toml  README.md
backend/services/alert-service/: Cargo.toml  README.md
backend/services/analytics-worker/: Cargo.toml  README.md
backend/services/api-gateway/: Cargo.toml  README.md
backend/services/compliance-service/: Cargo.toml  README.md
backend/services/export-service/: Cargo.toml  README.md
backend/services/ingestion-worker/: Cargo.toml  README.md
backend/services/provider-gateway/: Cargo.toml  README.md
(+392 files in other folders)
