[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/config",
  "crates/observability",
  "crates/auth",
  "crates/tenancy",
  "crates/policy",
  "crates/database",
  "crates/events",
  "crates/providers",
  "crates/meta-api",
  "crates/analytics",
  "crates/compliance",
  "crates/billing",
  "crates/exports",
  "crates/alerts",
  "crates/search",
  "crates/testing",
  "services/api-gateway",
  "services/ingestion-worker",
  "services/analytics-worker",
  "services/provider-gateway",
  "services/compliance-service",
  "services/export-service",
  "services/alert-service",
]

[workspace.package]
edition = "2021"
version = "0.0.0-batch0"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
